--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -10,8 +10,8 @@
 
 <!-- Place favicon.ico in the root directory -->
 
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
+<style type="text/css">{{ inlineCSS }}</style>
+
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -22,57 +22,68 @@
   <div class="logo">
     <img src="assets/tdn-icon.512.png">
   </div>
+  <h1>
+    {{{ headline }}}
+    <blockquote>{{{ subheadline }}}</blockquote>
+  </h1>
 </header>
 
 <main>{{{ contents }}}</main>
 
 <footer>
-  <div class="credits">
+  <section>
     <b>Impressum</b>
-
-    <p>Verantwortlich laut §5 TMG</p>
-
-    <p>Jakob Hohlfeld, Schillerstraße 40, 38440 Wolfsburg</p>
-
     <p>
+      Verantwortlich laut §5 TMG<br>
+      Jakob Hohlfeld, Schillerstraße 40, 38440 Wolfsburg<br>
       <a href="privacy.html">Datenschutzerklärung</a>
     </p>
-
+  </section>
+  <section>
     <p>
-    Polyban.io Web Consulting<br>
-    Jakob Hohlfeld<br>
-    Schillerstraße 40<br>
-    ℅ Schiller40 CoWorking-Space<br>
-    38440 Wolfsburg
-    </p>
-
-    <p>
+      Polyban.io Web Consulting<br>
+      Jakob Hohlfeld<br>
+      Schillerstraße 40<br>
+      ℅ Schiller40 CoWorking-Space<br>
+      38440 Wolfsburg<br>
       <a href="http://polyban.io" target="blank">http://polyban.io</a>
     </p>
-
-  </div>
+  </section>
 </footer>
 
 <script>
-var gaProperty = 'UA-60273283-2';
-var disableStr = 'ga-disable-' + gaProperty;
-if (document.cookie.indexOf(disableStr + '=true') > -1) {
-  window[disableStr] = true;
-}
-function gaOptout() {
-  document.cookie = disableStr + '=true; expires=' + Date.UTC(new Date(Date.now()).getFullYear()+99) + '; path=/';
-  window[disableStr] = true;
-}
+  var gaProperty = 'UA-60273283-2';
+  var disableStr = 'ga-disable-' + gaProperty;
+  if (document.cookie.indexOf(disableStr + '=true') > -1) {
+    window[disableStr] = true;
+  }
+  function gaOptout() {
+    document.cookie = disableStr + '=true; expires=' + Date.UTC(new Date(Date.now()).getFullYear()+99) + '; path=/';
+    window[disableStr] = true;
+  }
 </script>
 
+<!-- Google Analytics -->
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-60273283-2', 'auto');
-ga('set', 'anonymizeIp', true);
-ga('send', 'pageview');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-60273283-2', 'auto');
+  ga('set', 'anonymizeIp', true);
+  ga('send', 'pageview');
+</script>
+
+<!-- Hotjar Tracking Code for voice.link -->
+<script>
+  (function(h,o,t,j,a,r){
+    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+    h._hjSettings={hjid:608788,hjsv:5};
+    a=o.getElementsByTagName('head')[0];
+    r=o.createElement('script');r.async=1;
+    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+    a.appendChild(r);
+  })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
 </body>
